go/static/css/styles.css
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 80px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f5f5f5;
}
.valign-center {
  height: 60px;
  line-height: 60px;
}
.valign-center span {
  display: inline-block;
  vertical-align: middle;
}
.asteriskField {
    display: none;
}
.fa-li {
  top: 5px;
}
.fa-ul > li {
  padding: 0 0 5px;
}
.navbar-brand {
  padding: 10px 15px;
}
.btn-blockUsr {
  font-weight: 600;
}
.btn-Unblock {
  font-weight: 600;
}
.inputfilter {
    background-position: 10px 12px;
    background-repeat: no-repeat;
    width: 35%;
    font-size: 16px;
    padding: 7px 20px 7px 40px;
    border: 1px solid #ddd;
    margin-bottom: 12px;
    float: right;
}

